# clambda

./: .clang-format  CMakeLists.txt
include/clambda/: parse_ast.h
include/lambda/: parse_ast.h
include/ub/: format.h
include/ubclib/: format.h
source/: main.c
source/clambda/: parse_ast.c
source/lambda/: parse_ast.c
source/ub/: format.c
source/ubclib/: format.c
